--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ const seoDescription = "A modern, high-performance Astro theme for developer por
 const base = import.meta.env.VITE_BASE || "";
 
 const heroContent = {
-    title: `Hello World Base: ${import.meta.env.VITE_BASE}`,
+    title: 'Hello World',
     description: 'This is the landing page of my future blog for game dev content',
     backgroundImage: heroImage,
     overlayOpacity: 0.2
