testing mainpage link

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -33,7 +33,7 @@ const featuresSection = {
     features: featureLists.main.features,
     button: {
         text: "View Theme Info",
-        link: base + "theme-info",
+        link: "/" + base + "/theme-info",
         variant: "primary" as const
     }
 }
